force-app/main/default/objects/Checklist_Item__c/Checklist_Item__c.object-meta.xml
<CustomObject>
    <label>Checklist Item</label>
    <nameField>
        <displayFormat>C-{000000000}</displayFormat>
        <label>Checklist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>