force-app/main/default/objects/Checklist_Item__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(Legacy)Active</label>
    <type>Checkbox</type>
</CustomField>