force-app/main/default/objects/Checklist_Item__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Checklist</label>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Checklist Item</relationshipLabel>
    <relationshipName>Checklist_Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>