force-app/main/default/objects/Checklist_Item__c/fields/Checklist_Section__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Section</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Checklist_Section__c.Checklist__c</field>
            <operation>equals</operation>
            <valueField>$Source.Checklist__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Checklist_Section__c</referenceTo>
    <relationshipLabel>Checklist Item</relationshipLabel>
    <relationshipName>Checklist_Item</relationshipName>
    <type>Lookup</type>
</CustomField>