force-app/main/default/objects/Checklist_Item__c/fields/Display_Text__c.field-meta.xml
<CustomField>
    <fullName>Display_Text__c</fullName>
    <label>Display Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>