force-app/main/default/objects/Checklist_Item__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <label>(Legacy)Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radio Button</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Checkbox Group</fullName>
            </value>
            <value>
                <fullName>Multi Checkbox Picklist</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>