force-app/main/default/objects/Checklist_Item__c/fields/Dynamic_Fields__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Fields__c</fullName>
    <label>Dynamic Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>