force-app/main/default/objects/Checklist_Item__c/fields/Option_Other__c.field-meta.xml
<CustomField>
    <fullName>Option_Other__c</fullName>
    <label>(Legacy)Option Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>