force-app/main/default/objects/Checklist_Item__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>(Legacy)Options</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>