force-app/main/default/objects/Checklist_Item__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>(Legacy)Question Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>